--- a/app/src/main/res/layout/activity_equip.xml
+++ b/app/src/main/res/layout/activity_equip.xml
@@ -560,6 +560,7 @@
                     android:background="@drawable/ui_button_basic"
                     android:text="능력치 확인"
                     android:layout_margin="5dp"
+                    android:onClick="goStatInfo"
                     tools:ignore="MissingConstraints" />
                 <Button
                     android:layout_width="200dp"
