--- a/app/src/main/res/layout/activity_equip.xml
+++ b/app/src/main/res/layout/activity_equip.xml
@@ -536,23 +536,12 @@
                     </FrameLayout>
 
                 </GridLayout>
-                <GridLayout
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center|bottom"
                     android:layout_margin="10dp"
-                    android:columnCount="2">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:text="직업 : 초보자"/>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="10dp"
-                        android:text="레벨 : 250"/>
-                </GridLayout>
+                    android:gravity="center"
+                    android:text="직업:초보자 레벨:250  ⚙"/>
                 <Button
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
