--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,12 +28,12 @@
         tools:ignore="MissingConstraints">
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="170dp"
+            android:layout_height="160dp"
             android:src="@drawable/ui_title"/>
         <ImageView
             android:id="@+id/thumnail"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
             android:layout_gravity="center"
             android:layout_margin="15dp"
             android:background="@drawable/ui_empty_item"
@@ -102,6 +102,7 @@
             android:layout_margin="5dp"
             android:text="장비 장착"
             android:onClick="goEquip"
+            android:visibility="gone"
             tools:ignore="MissingConstraints" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
