--- a/app/src/main/res/layout/fragment_character_info.xml
+++ b/app/src/main/res/layout/fragment_character_info.xml
@@ -1,13 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/character_info"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1번"
-        android:textSize="20sp"
-        tools:ignore="MissingConstraints" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center">
+    <LinearLayout
+        android:layout_width="300dp"
+        android:layout_height="400dp"
+        android:orientation="vertical"
+        android:elevation="10dp"
+        android:background="@drawable/ui_character_info">
+        <TextView
+            android:id="@+id/character_info_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1/3"
+            android:textSize="20sp"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"/>
+        <ImageView
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"/>
+        <TextView
+            android:id="@+id/character_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이름 : 뭐시기\n레벨 : 200\n직업 : 패스파인더"
+            android:lineSpacingExtra="10sp"
+            android:textSize="15sp"
+            android:layout_margin="10dp"
+            android:layout_gravity="center"/>
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_gravity="bottom|center"
+            android:layout_margin="10dp"
+            android:text="장비 장착"
+            android:background="@drawable/ui_button_basic"/>
+    </LinearLayout>
+</LinearLayout>
+
