--- a/app/src/main/res/layout/activity_setting_stat.xml
+++ b/app/src/main/res/layout/activity_setting_stat.xml
@@ -29,7 +29,7 @@
             android:id="@+id/equipInfo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dp"
+            android:layout_margin="15dp"
             android:gravity="center"
             android:orientation="vertical">
             <View
@@ -39,9 +39,9 @@
                 android:id="@+id/name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="스탯 설정"
+                android:text="세부 설정"
                 android:textAlignment="center"
-                android:textSize="21sp"
+                android:textSize="18sp"
                 android:textColor="#555555"/>
             <View
                 android:layout_width="match_parent"
@@ -51,16 +51,38 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="직업 : 초보자"
-                android:lineSpacingExtra="5dp"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginVertical="5dp"
+                android:text="이름 : 이름 없음"
                 android:textSize="17sp"
                 android:textColor="#555555"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginVertical="5dp"
+                android:text="직업 : 초보자"
+                android:textSize="17sp"
+                android:textColor="#555555"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginVertical="5dp"
+                android:text="레벨 : 250"
+                android:textSize="17sp"
+                android:textColor="#555555"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
                 android:layout_margin="10dp"
-                android:text="STR : 200\nDEX : 200\nINT : 200\nLUK 200\nHP : 200"
+                android:background="#cccc"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="15dp"
+                android:layout_marginVertical="5dp"
+                android:text="STR : 200\nDEX : 200\nINT : 200\nLUK : 200\nHP : 200"
                 android:lineSpacingExtra="10dp"
                 android:textSize="17sp"
                 android:textColor="#555555"/>
