--- a/app/src/main/res/layout/activity_setting_stat.xml
+++ b/app/src/main/res/layout/activity_setting_stat.xml
@@ -30,7 +30,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:gravity="center"
             android:orientation="vertical">
             <View
                 android:layout_width="match_parent"
@@ -49,43 +48,27 @@
                 android:layout_margin="10dp"
                 android:background="#cccc"/>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginVertical="5dp"
-                android:text="이름 : 이름 없음"
-                android:textSize="17sp"
-                android:textColor="#555555"/>
+                style="@style/SettingInfoTextview"
+                android:text="이름 : 이름없음"/>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginVertical="5dp"
+                style="@style/SettingInfoTextview"
+                android:onClick="goInput"
                 android:text="직업 : 초보자"
-                android:textSize="17sp"
-                android:textColor="#555555"/>
+                tools:ignore="OnClick" />
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginVertical="5dp"
-                android:text="레벨 : 250"
-                android:textSize="17sp"
-                android:textColor="#555555"/>
+                style="@style/SettingInfoTextview"
+                android:text="레벨 : 250"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_margin="10dp"
                 android:background="#cccc"/>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="15dp"
-                android:layout_marginVertical="5dp"
-                android:text="STR : 200\nDEX : 200\nINT : 200\nLUK : 200\nHP : 200"
-                android:lineSpacingExtra="10dp"
-                android:textSize="17sp"
-                android:textColor="#555555"/>
+                style="@style/SettingInfoTextview"
+                android:text="STR : 30,000"/>
+            <TextView
+                style="@style/SettingInfoTextview"
+                android:text="DEX : 30,000"/>
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
@@ -124,6 +107,7 @@
                 android:layout_height="40dp"
                 android:layout_margin="10dp"
                 android:background="@drawable/ui_button_basic"
+                android:layout_gravity="center"
                 android:text="적용"
                 tools:ignore="OnClick" />
             <View
